<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayListManageActivity">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:onClick="backClicked"
        android:background="@drawable/my_ripple"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="76dp"
        android:text="@string/select_files_to_delete"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toStartOf="@+id/imageSelectAll"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toEndOf="@+id/imageBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageSelectAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/my_ripple"
        android:clickable="true"
        android:onClick="selectAllClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_playlist_select_all_24dp" />

    <ListView
        android:id="@+id/listViewPlayList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDelete"
        app:layout_constraintTop_toBottomOf="@+id/textView"></ListView>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/btn_delete_selected"
        android:onClick="deleteSelectedAudioFiles"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonOk" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/btn_close"
        android:onClick="okClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>